fix: issue where main home component was overflowing

--- a/frontend/src/pages/home/featured/featured.css
+++ b/frontend/src/pages/home/featured/featured.css
@@ -3,7 +3,7 @@
     display: none;
     color: var(--primary-font-color);
     padding: 1rem;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     width: 100%;
     min-height: 100%;
     transition-duration: .2s;
