--- a/frontend/src/pages/home/feed/feed.css
+++ b/frontend/src/pages/home/feed/feed.css
@@ -1,7 +1,7 @@
 
 #feed {
     display: none;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     width: 100%;
     max-width: 750px;
 }
