--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,6 +1,8 @@
 
 #home {
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #home .tabs {
